fix navbar alignment

--- a/src/Tablet.css
+++ b/src/Tablet.css
@@ -85,33 +85,4 @@
 
     /* HOME ENDS HERE */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-}
-
-
-
-
-@media screen and (min-width: 600px) {
-    /* .galleries .swiper {
-        height: 500px;
-        width: 100%;
-        max-width: 500px;
-        margin: 0;
-        padding: 0;
-        /* display: grid;
-        flex-direction: column;
-    } */
 }
